--- a/src/components/singleCard.scss
+++ b/src/components/singleCard.scss
@@ -9,4 +9,17 @@
        border-radius:6px;
       
     } 
+
+    
+}
+
+.Card .front{
+    transform:rotateY(90deg);
+        position: absolute;
+        transition: all ease-in 0.5s;
+}
+
+.flipped .front{
+    transform:rotateY(0deg);
+    transition-delay: 0.2s;
 }
